--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "employee.js",
     "dependencies": {
       "inquirer": "^6.2.1",
-      "mysql": "^2.16.0"
+      "mysql": "^2.16.0",
+      "console.table": "0.10.0"
     }
   }
   
